MET-4553 Fix SandboxApplicationIT with containers